--- a/configs/templates/configs/fail.html
+++ b/configs/templates/configs/fail.html
@@ -25,7 +25,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
-				<h3>Спасибо большое , мы свяжемся с Вами в ближайшее время</h3>
+				<h3>Ошибка отпарвки формы</h3>
 			</div>
 		</div>
 	</div>
