--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load core_tags %}
+{% load configs_tags %}
 {% load flatblocks %}
 {% load cropping %}
 
@@ -78,25 +79,7 @@
 			<div class="col-md-12">
 				<h2><small>Монтаж натяжных потолков</small>Лучшее решение для вашего интерьера</h2>
 				<div class="ostav_zayavku">
-					<div class="header_zakaz"><button class="btn btn-primary" data-toggle="modal" data-target="#myModal">Заказать замер<i class="fa fa-chevron-circle-right"></i></button></div>
-
-					<!-- Modal -->
-					<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-					  <div class="modal-dialog">
-					    <div class="modal-content">
-					      <div class="modal-header">
-					        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-					        <h3 class="modal-title" id="myModalLabel">Заказать замер</h3>
-					      </div>
-					      <div class="modal-body">
-					       Форма
-					      </div>
-					      <div class="modal-footer">
-					        <button type="button"  data-dismiss="modal"class="btn btn-primary">Закрыть</button>
-					      </div>
-					    </div>
-					  </div>
-					</div>
+					{% contact_form request %}
 				</div>
 			</div>
 		</div><!--end-container-->
