--- a/ceilings/templates/ceilings/filter_item.html
+++ b/ceilings/templates/ceilings/filter_item.html
@@ -2,114 +2,103 @@
 {% load ceilings_tags %}
 {% load flatblocks %}
 {% load cropping %}
-
+{% load django_bootstrap_breadcrumbs %}
 
 
 {% block breadcrumbs %}
-	<!--  :::  BREADCRUMBS ::: -->
-	<section class="breadcrumbs breadcrumbs2 servicesBG wow fadeInDown" data-wow-duration="0.25s" data-wow-delay="0.45s">
-	  <div class="boxedeb">
-	    <div class="container page-block-small">
-	      <div class="col-md-12 col-sm-12 col-xs-12">
-	          <h2>Раздел: {{ filter.name }}</h2>
-	          <span class="line"></span>
-	        <div class="rightText">
-	            <a href="index.html" title="Home">Home</a> / <a href="services.html" title="Services">Services</a> / Commercial Interior Design
-	        </div>
-	      </div>
-	    </div><!--end-container-->
-	  </div>
-	</section>
-	<!-- ::: END ::: -->
+	{% breadcrumb "Home" "/" %}
+	{% breadcrumb "Каталог товаров" "ceiling_list" %}
+	{% breadcrumb filter.name filter.get_url %}
 {% endblock breadcrumbs %}
 
 
-
 {% block content %}
-<section id="ceiling-list" class="member-info page-block-large">
-	<div class="container">
+	{% render_breadcrumbs "configs/breadcrumbs/main.html" %}
 
-		<!-- start SIDEBAR -->
-		<div class="sidebar">
-			<div class="col-md-4 col-sm-4 col-xs-12 text-center wow fadeInUp" data-wow-duration="0.75s" data-wow-delay="1s">
-				<div class="gapM"></div>
-					<ul class="social list-inline">
-						<li><a class="fb" href="team-single.html#" title="Follow Us on Facebook"><i class="fa fa-facebook"></i></a></li>
-						<li><a class="tw" href="team-single.html#" title="Follow Us on Twitter"><i class="fa fa-twitter"></i></a></li>
-						<li><a class="yt" href="team-single.html#" title="Watch Our Videos"><i class="fa fa-youtube-play"></i></a></li>
-						<li><a class="li" href="team-single.html#" title="Follow Us on LinkedIn"><i class="fa fa-linkedin"></i></a></li>
-						<li><a class="gplus" href="team-single.html#" title="Google Plus"><i class="fa fa-google-plus"></i></a></li>
-						<li><a class="vk" href="team-single.html#" title="Follow Us on vk"><i class="fa fa-vk"></i></a></li>
+	<section id="ceiling-list" class="member-info page-block-large">
+		<div class="container">
+
+			<!-- start SIDEBAR -->
+			<div class="sidebar">
+				<div class="col-md-4 col-sm-4 col-xs-12 text-center wow fadeInUp" data-wow-duration="0.75s" data-wow-delay="1s">
+					<div class="gapM"></div>
+						<ul class="social list-inline">
+							<li><a class="fb" href="team-single.html#" title="Follow Us on Facebook"><i class="fa fa-facebook"></i></a></li>
+							<li><a class="tw" href="team-single.html#" title="Follow Us on Twitter"><i class="fa fa-twitter"></i></a></li>
+							<li><a class="yt" href="team-single.html#" title="Watch Our Videos"><i class="fa fa-youtube-play"></i></a></li>
+							<li><a class="li" href="team-single.html#" title="Follow Us on LinkedIn"><i class="fa fa-linkedin"></i></a></li>
+							<li><a class="gplus" href="team-single.html#" title="Google Plus"><i class="fa fa-google-plus"></i></a></li>
+							<li><a class="vk" href="team-single.html#" title="Follow Us on vk"><i class="fa fa-vk"></i></a></li>
+						</ul>
+
+					{% catalog_list request %}
+
+				</div><!-- end col-md-4 -->
+			</div>
+			<!-- end SIDEBAR -->
+
+			<div class="col-md-8 col-sm-8 col-xs-12 wow fadeInUp" data-wow-duration="0.75s" data-wow-delay="0.50s">
+				<h1 class="big">
+					{% for word in filter.split_name %}
+						{% if forloop.first %}
+							<strong>{{ word }}</strong>
+						{% else %}{{ word }} {% endif %}
+					{% endfor %}
+				</h1>
+
+				<div class="meta-data BGlight row">
+					<div class="col-md-4 col-sm-12">
+						Натяжные потолки
+					</div>
+					<div class="text-right col-md-8 col-sm-12">
+						<strong>150</strong> Потолков установлено <span>|</span> <strong>03</strong> Проекта в работе
+					</div>
+				</div>
+
+				<div class="clear"></div>
+
+				{{ filter.text|safe }}
+
+				<!--  :::  PROMO BOX ::: -->
+				<section class="promoBox">
+					<div class="container-fluid">
+						<div class="row">
+
+							{% for ceiling in ceilings %}
+						    <div
+						    	class="col-md-6 {% cycle 'commercial' 'residential' %}"
+						    	style="background: url({{ ceiling.get_image_url }}) no-repeat center center;">
+									<div class="absShape {% cycle 'BGprime' 'BGsec' %} opaque">
+										<div class="info">
+											<h3>{{ ceiling.name }}</h3>
+											<div class="price">{{ ceiling.price }} руб/м²</div>
+											<p>{{ ceiling.preview_text|truncatechars:100|safe }}</p>
+										</div>
+									</div>
+									<a href="{{ ceiling.get_url }}" title=""><i class="fa fa-link square BGdark">подробнее</i></a>
+								</div>
+							{% endfor %}
+
+						</div><!-- end row -->
+					</div><!-- end container -->
+				</section>
+				<!-- ::: END ::: -->
+
+				<div class="gapS"></div>
+				{% if filter.get_advantages|length > 0 %}
+					<h4>Преимущества данного вида потолка:</h4>
+					<span class="line"></span>
+					<ul class="list-default">
+						{% for adv in filter.get_advantages %}
+							<li>{{ adv.name }}</li>
+						{% endfor %}
 					</ul>
+				{% endif %}
 
-				{% catalog_list request %}
 
 			</div><!-- end col-md-4 -->
-		</div>
-		<!-- end SIDEBAR -->
 
-		<div class="col-md-8 col-sm-8 col-xs-12 wow fadeInUp" data-wow-duration="0.75s" data-wow-delay="0.50s">
-			<h1 class="big">
-				{% for word in filter.split_name %}
-					{% if forloop.first %}
-						<strong>{{ word }}</strong>
-					{% else %}{{ word }} {% endif %}
-				{% endfor %}
-			</h1>
-
-			<div class="meta-data BGlight row">
-				<div class="col-md-4 col-sm-12">
-					Натяжные потолки
-				</div>
-				<div class="text-right col-md-8 col-sm-12">
-					<strong>150</strong> Потолков установлено <span>|</span> <strong>03</strong> Проекта в работе
-				</div>
-			</div>
-
-			<div class="clear"></div>
-
-			{{ filter.text|safe }}
-
-			<!--  :::  PROMO BOX ::: -->
-			<section class="promoBox">
-				<div class="container-fluid">
-					<div class="row">
-
-						{% for ceiling in ceilings %}
-					    <div
-					    	class="col-md-6 {% cycle 'commercial' 'residential' %}"
-					    	style="background: url({{ ceiling.get_image_url }}) no-repeat center center;">
-								<div class="absShape {% cycle 'BGprime' 'BGsec' %} opaque">
-									<div class="info">
-										<h3>{{ ceiling.name }}</h3>
-										<div class="price">{{ ceiling.price }} руб/м²</div>
-										<p>{{ ceiling.preview_text|truncatechars:100|safe }}</p>
-									</div>
-								</div>
-								<a href="{{ ceiling.get_url }}" title=""><i class="fa fa-link square BGdark">подробнее</i></a>
-							</div>
-						{% endfor %}
-
-					</div><!-- end row -->
-				</div><!-- end container -->
-			</section>
-			<!-- ::: END ::: -->
-
-			<div class="gapS"></div>
-			{% if filter.get_advantages|length > 0 %}
-				<h4>Преимущества данного вида потолка:</h4>
-				<span class="line"></span>
-				<ul class="list-default">
-					{% for adv in filter.get_advantages %}
-						<li>{{ adv.name }}</li>
-					{% endfor %}
-				</ul>
-			{% endif %}
-
-
-		</div><!-- end col-md-4 -->
-
-	 </div><!-- end container -->
-</section>
-<!-- ::: END ::: -->
+		 </div><!-- end container -->
+	</section>
+	<!-- ::: END ::: -->
 {% endblock content %}
