--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -421,7 +421,7 @@
 	<section class="client page-block">
 		<div class="container">
 			<div class="col-md-5 col-sm-5 col-xs-12 wow ">
-					<h2><i class="fa fa-diamond square BGsec"></i>Clients <small>Precious  &amp; Happy clients</small></h2>
+					<h2><i class="fa fa-diamond square BGsec"></i>Марки натяжных потолков<small>Мы работаем только с проверенными производителями натяжных потолков</small></h2>
 			</div>
 
 			<div class="col-md-7 col-sm-7 col-xs-12 wow">
@@ -431,8 +431,6 @@
 					<div class="slide"><img src="/static/joyus/images/clients/03.png" alt="Client name"></div>
 					<div class="slide"><img src="/static/joyus/images/clients/04.png" alt="Client name"></div>
 					<div class="slide"><img src="/static/joyus/images/clients/05.png" alt="Client name"></div>
-					<div class="slide"><img src="/static/joyus/images/clients/06.png" alt="Client name"></div>
-					<div class="slide"><img src="/static/joyus/images/clients/07.png" alt="Client name"></div>
 				</div>
 			</div><!-- end col-md-4 -->
 		</div><!-- end container -->
@@ -447,21 +445,42 @@
 				<div class="widget wow fadeInLeft" data-wow-duration="0.30s" data-wow-delay="0.30s">
 						<h2>Калькулятор<small>Расчитайте стоимость своего потолка</small></h2>
 						<p>Внесите параметры своего потолка и мы расчитаем Вам точную стоимость.</p>
-						<a class="btn btn-primary" href="/static/joyus/contact1.html" title="Расчитать">Расчитать<i class="fa fa-calculator"></i></a>
+						<button class="btn btn-primary" data-toggle="modal" data-target="#myModal2">Расчитать потолок<i class="fa fa-chevron-circle-right"></i></button>
 						<i class="fa fa-calculator"></i>
+					<div class="ostav_zayavku">
+						<!-- Modal -->
+						<div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+						  <div class="modal-dialog">
+						    <div class="modal-content">
+						      <div class="modal-header">
+						        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+						        <h3 class="modal-title" id="myModalLabel">Расчитать сстоимость потолка</h3>
+						      </div>
+						      <div class="modal-body">
+						       Форма
+						      </div>
+						      <div class="modal-footer">
+						        <button type="button"  data-dismiss="modal"class="btn btn-primary">Закрыть</button>
+						      </div>
+						    </div>
+						  </div>
+						</div>
+					</div>
 				</div>
 				<div class="widget wow fadeInRight" data-wow-duration="0.30s" data-wow-delay="0.30s">
-					<h2>Subscribe<small>to Enewsletter</small></h2>
+					<h2>Вызвать замерщика<small>Введите свой номер телефона и мы перезваним Вам в течении минуты</small></h2>
 					<form action="http://dezinethemes.com/envato/striking/200/01/09/form/subscribe.php" id="subscribeForm" method="post">
 						<div class="form-row">
-							 <input type="email" id="emailSubscribe" name="emailSubscribe" class="form-control" placeholder="Enter Your Email Address Here..." />
+							 <input type="tel" id="phone" name="phone" value="" class="form-control" placeholder="Ваш номер телефона">
 							 <input type="text" id="sub-security" name="sub-security" class="form-control hide" value="" />
-							 <input type="submit" id="sub-submit" name="sub-submit" value="Subscribe &#xf138;" class="btn btn-primary" />
+							 <input type="submit" id="sub-submit" name="sub-submit" value="Отправить &#xf138;" class="btn btn-primary" />
 						</div>
+
 					</form>
 					<i class="fa fa-volume-control-phone"></i>
 				</div>
 			</div><!-- end container -->
 		</div> <!-- end boxedw -->
 	</section>
+
 {% endblock call_to_action %}
