--- a/core/templates/core/tags/footer.html
+++ b/core/templates/core/tags/footer.html
@@ -20,58 +20,47 @@
 				
 		</div>
 		<div class="col-md-4 col-sm-12 col-xs-12 content-box wow fadeInUp" data-wow-duration="0.50s" data-wow-delay="0.50s">
-			<h5>About</h5>
-			<p>Lorem ipsum dolor sit amet, rislaoreetsuscipit turpis mollis non. Lcons is molli Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas quis quam non tellus ultricies accumsan. Lorem Loripiscing elit. Maecenas quis quam non tellus ultricies accumsan.</p>
-			<a href="/static/joyus/about2.html" title="About Company">Read More <i class="fa fa-chevron-circle-right"></i></a>
+			<h5>Натяжные поолки от компании "Joyus"</h5>
+			<p>Результатом работы мастеров нашей компании станут прочные, красивые натяжные потолки недорого, которые удачно замаскируют системы освещения, кондиционирования, сигнализации, станут достойным украшением интерьера. Установка конструкции не разорит семейный бюджет, так как стоимость работ с установкой составляет 390 руб. за 1 м 2. Высокое качество материалов, идеальный монтаж гарантируют сохранение функциональных и эстетических показателей в течение многих лет.</p>
 		</div><!-- end content box -->
 		
 		<div class="col-md-2 col-sm-3 col-xs-12 content-box wow fadeInUp" data-wow-duration="0.50s" data-wow-delay="0.75s">
-			<h5>Quick Links</h5>
+			<h5>Посетите станицы</h5>
 			<ul>
-				<li><a href="/static/joyus/portfolio-4col.html" title="Portfolio">Portfolio</a></li>
-				<li><a href="/static/joyus/gallery-full-width.html" title="Gallery Full Width">Gallery</a></li>
-				<li><a href="/static/joyus/blog.html" title="Blog">Blog</a></li>
-				<li><a href="/static/joyus/press.html">Press</a></li>
-				<li><a href="/static/joyus/contact2.html" title="Contact">Contact</a></li>
+				<li><a href="#">Акции</a></li>
+				<li><a href="/projects" title="Наши работы">Наши работы</a></li>
+				<li><a href="/natyazhnye-potolki" title="Наши услуги">Наши услуги</a></li>
+				<li><a href="/posts" title="Интересные статьи">Интересные статьи</a></li>
 			</ul>
 		</div><!-- end content box -->
 		
 		<div class="col-md-3 col-sm-5 col-xs-12 content-box wow fadeInUp" data-wow-duration="0.50s" data-wow-delay="1s">
-			<h5>Services</h5>
+			<h5>Сервиз и потдержка</h5>
 			<ul>
-				<li><a href="/static/joyus/services-single-1.html" title="Commercial design">Commercial Interior Design</a></li>
-				<li><a href="/static/joyus/services-single-2.html" title="Interior design">Residential Interior Design</a></li>
-				<li><a href="/static/joyus/services-single-3.html" title="Exterior design">Exterior design</a></li>
-				<li><a href="/static/joyus/services-single-4.html" title="Renovation">Renovation</a></li>
-				<li><a href="/static/joyus/services-single-4.html" title="Maintainance">Annual Maintainance</a></li>
+				<li><a href="/pages/contacts/" title="Commercial design">Контакты</a></li>
+				<li><a href="#" title="Расчет стоимости потолка">Расчет стоимости потолка</a></li>
+				<li><a href="#" title="Вызов замерщика">Вызов замерщика</a></li>
+				<li><a href="#" title="Прайс лист">Прайс лист</a></li>
 			</ul>
 		</div><!-- end content box -->
 		
 		<div class="col-md-3 col-sm-4 col-xs-12 content-box wow fadeInUp" data-wow-duration="0.50s" data-wow-delay="1.25s">
-			<h5>Get in touch</h5>
+			<h5>Контактная информация</h5>
 			<div class="office">
-				<span><i class="fa fa-map-marker"></i> 123 Main Street<br>
-					Your City, State Country.</span> 
-				<span><i class="fa fa-phone"></i> (123) 456-7890 <br>(123) 456-7890 </span>
-				<span><i class="fa fa-fax"></i> (123) 456-7890</span>
+				<span><i class="fa fa-map-marker"></i>г. Новороссийск<br>
+					Краснодарский край</span> 
+				<span><i class="fa fa-phone"></i> (123) 456-7890</span>
 				<span><i class="fa fa-envelope-o"></i> <a href="/static/joyus/mailto:info@companynme.com" title="">info@companynme.com</a> </span>
 			</div>   
 		</div><!-- end content box -->
 		
 		<div class="clear"></div>
-		<hr class="light">
+		<hr class="light2">
 	
 		<!-- ::: START COPYRIGHT ::: -->
 		<div class="copyright wow fadeInUp" data-wow-duration="0.50s" data-wow-delay="0.50s" data-wow-offset="0"> 
 			<div class="col-md-5 col-sm-6 col-xs-12">
-				<p><strong>Striking</strong> &copy; 2015. All Rights Reserved.<br> Landing Page Template Designed &amp; Developed By: <a href="/static/joyus/http://themeforest.net/user/saptarang?ref=saptarang" title="Saptarang" target="_blank"><strong>Saptarang</strong></a></p>
-			</div>
-			<div class="col-md-7 col-sm-6 col-xs-12 text-right">
-				<ul class="list-inline">
-						<li><a href="/static/joyus/terms.html" title="Terms & Conditions">Terms &amp; Conditions</a></li>
-						<li><a href="/static/joyus/privacy.html" title="Privacy Policy">Privacy Policy</a></li>
-						<li><a href="/static/joyus/sitemap.html" title="Sitemap">Sitemap</a></li>
-				</ul>
+				<p>Разработка сайта<a href="http://evilmonkey.ru/" title="Evilmonkey" target="_blank"><strong>Evilmonkey</strong></a></p>
 			</div>
 		</div><!-- end container -->
 	</div><!-- end copyright --> 
