--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -7,9 +7,9 @@
 <html lang="en"><head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-<title>:: Striking Interior Design Company Website ::</title>
-<meta name="description" content="Welcome to Striking Interior Design Template">
-<meta name="keywords" content="interior, design, services, expert, analysis, structure, luxury, home, kitchen, berdroom, living room, bathroom, kid, office, infrastructure">
+<title>{{ title }} | Натяжные потолки Joy Us</title>
+<meta name="description"  content="{{ description }}"/>
+<meta name="keywords" content="{{ keywords }}">
 <meta name="author" content="Saptarang">
 
 <!-- Mobile Specific Meta -->
