--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -435,20 +435,22 @@
 					<div class="ostav_zayavku">
 						<!-- Modal -->
 						<div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-						  <div class="modal-dialog">
-						    <div class="modal-content">
-						      <div class="modal-header">
-						        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-						        <h3 class="modal-title" id="myModalLabel">Расчитать сстоимость потолка</h3>
-						      </div>
-						      <div class="modal-body">
-						       Форма
-						      </div>
-						      <div class="modal-footer">
-						        <button type="button"  data-dismiss="modal"class="btn btn-primary">Закрыть</button>
-						      </div>
-						    </div>
-						  </div>
+							<div class="modal-dialog">
+								<div class="modal-content">
+									<div class="modal-header">
+										<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+										<h3 class="modal-title" id="myModalLabel">Расчитать сстоимость потолка</h3>
+									</div>
+									<form id="calculator_form">{% csrf_token %}
+										<div class="modal-body">
+										{{ calculator_form }}
+										</div>
+										<div class="modal-footer">
+											<button type="submit" class="btn btn-primary">Отправить</button>
+										</div>
+									</form>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
