--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -430,35 +430,14 @@
 				<div class="widget wow fadeInLeft" data-wow-duration="0.30s" data-wow-delay="0.30s">
 						<h2>Калькулятор<small>Расчитайте стоимость своего потолка</small></h2>
 						<p>Внесите параметры своего потолка и мы расчитаем Вам точную стоимость.</p>
-						<button class="btn btn-primary" data-toggle="modal" data-target="#myModal2">Расчитать потолок<i class="fa fa-chevron-circle-right"></i></button>
+						<button class="btn btn-primary" data-toggle="modal" data-target="#myModal-calculator">Расчитать потолок<i class="fa fa-chevron-circle-right"></i></button>
 						<i class="fa fa-calculator"></i>
-					<div class="ostav_zayavku">
-						<!-- Modal -->
-						<div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-							<div class="modal-dialog">
-								<div class="modal-content">
-									<div class="modal-header">
-										<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-										<h3 class="modal-title" id="myModalLabel">Расчитать сстоимость потолка</h3>
-									</div>
-									<form id="calculator_form">{% csrf_token %}
-										<div class="modal-body">
-										{{ calculator_form }}
-										</div>
-										<div class="modal-footer">
-											<button type="submit" class="btn btn-primary">Отправить</button>
-										</div>
-									</form>
-								</div>
-							</div>
-						</div>
-					</div>
 				</div>
 				<div class="widget wow fadeInRight" data-wow-duration="0.30s" data-wow-delay="0.30s">
 					<h2>Вызвать замерщика<small>Введите свой номер телефона и мы перезваним Вам в течении минуты</small></h2>
 					<form id="zamer-form">{% csrf_token %}
 						<div class="form-row">
-							 <input type="tel" id="phone" name="phone" value="" class="form-control" placeholder="Ваш номер телефона">
+							 <input type="tel" class="phone phone-zamer form-control"name="phone" value="" placeholder="Ваш номер телефона">
 							 <input type="text" id="sub-security" name="sub-security" class="form-control hide" value="" />
 							 <input type="submit" id="sub-submit" name="sub-submit" value="Отправить &#xf138;" class="btn btn-primary" />
 						</div>
