--- a/project/templates/sitetree/menu.html
+++ b/project/templates/sitetree/menu.html
@@ -1,6 +1,9 @@
 {% load sitetree %}
 
 <ul class="nav navbar-nav">
+			<li>
+				<a href="#" data-toggle="modal" data-target="#myModal-calculator">Расчитать потолок</a>
+			</li>
 	{% for item in sitetree_items %}
 		{% if item.has_children %}
 			<li class="sub">
