--- a/authentication/templates/authentication/login_modal.html
+++ b/authentication/templates/authentication/login_modal.html
@@ -7,7 +7,7 @@
 				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 				<h3 class="modal-title" id="myModalLabel">Войти</h3>
 			</div>
-			<form id="login-form">{% csrf_token %}
+			<form id="login-form" method="post" action="/authentication/login/">{% csrf_token %}
 				<div class="modal-body">
 					{% login_form request %}
 				</div>
