--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -325,6 +325,7 @@
 
 		});
 	</script>
+	<script type="text/javascript" src="//cdn.callbackhunter.com/cbh.js?hunter_code=9b7b3b3152d19629091ee426be3903ce" charset="UTF-8"></script>
 </body>
 </html>
 
