add advantages for base model

--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -196,7 +196,7 @@
 		{% footer request %}
 		<!-- ::: END ::: -->
 	</div><!-- end boxed -->
-	<a href="/static/joyus/index.html#top" class="top"><i class="fa fa-angle-up fa-lg"></i></a>
+	<a href="#top" class="top"><i class="fa fa-angle-up fa-lg"></i></a>
 
 	<!--START SCRIPTS -->
 	<script src="/static/joyus/js/jquery.min.js"></script>
