--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -273,18 +273,12 @@
 					<div class="clear"></div>
 				</div>
 				<ul class="list-main">
-					<li>
-						<h5>Мы делаем больше чем Вы ожидаете</h5>
-						<p>Уровень клиентского обслуживания опережает Ваши ожидания — компания "JOYUS" с максимальным вниманием относится к каждому клиенту.</p>
-					</li>
-					<li>
-						<h5>Высокая горантия</h5>
-						<p>Монтаж осуществляется быстро и безопасно силами сертифицированных специалистов, на все работы и материалы предоставляется гарантия до 15 лет.</p>
-					</li>
-					<li>
-						<h5>Безопасность и комфорт</h5>
-						<p>Наши натяжные потолки безвредны для здоровья. Производственные материалы свободны от аллергенов и токсичных компонентов, отвечают всем гигиеническим и пожарным требованиям безопасности. Компания обеспечивает бесплатный выезд на дом менеджера-консультанта для проведения тщательных замеров и расчета стоимости.</p>
-					</li>
+					{% for adv in about_page.advantages.all %}
+						<li>
+							<h5>{{ adv.short }}</h5>
+							<p>{{ adv.long|safe }}</p>
+						</li>
+					{% endfor %}
 				</ul>
 			</div>
 		</div><!-- end container -->
@@ -437,7 +431,7 @@
 						<div class="form-row">
 							 <input type="tel" class="phone phone-zamer form-control"name="phone" value="" placeholder="Ваш номер телефона">
 							 <input type="text" id="sub-security" name="sub-security" class="form-control hide" value="" />
-							 <button type="submit" id="sub-submit" name="sub-submit" class="btn btn-primary border-round" >Отправить <i class="fa fa-chevron-circle-right"></i></button>
+							 <button type="submit" id="sub-submit" name="sub-submit" class="btn btn-primary border-round" >Жду звонка <i class="fa fa-chevron-circle-right"></i></button>
 						</div>
 
 					</form>
