--- a/project/static/joyus/css/develop.css
+++ b/project/static/joyus/css/develop.css
@@ -297,3 +297,37 @@ input#id_phone,.phone.form-control:focus {
 ul#id_brend_polotna input{
     height: 1em;
 }
+.highlight {
+    padding: 9px 14px;
+    margin-bottom: 14px;
+    background-color: #f7f7f9;
+    border-left: 1px solid #e1e1e8;
+    border-radius: 0px 0px 4px 4px;
+    border-bottom: 1px solid #e1e1e8;
+    border-right: 1px solid #e1e1e8;
+    margin-top: 0px;
+}
+.bs-example .table{
+    margin-bottom: 0;
+}
+.bs-example {
+    border: 1px solid #e1e1e8;
+}
+.akciya {
+    background: #E54B49;
+    padding: 20px 16px;
+    margin-bottom: 20px;
+}
+.akciya p {
+    padding-bottom: 0px;
+    margin-bottom: 4px;
+    color: #fff;
+    font-size: 18px;
+    line-height: 15px;
+}
+.akciya p span {
+    text-transform: uppercase;
+    color: #56524C;
+    font-weight: bold;
+    font-size: 17px;
+}
